# sqlite-wrapper

./: .gitignore  README.md  __init__.py  pyproject.toml
wrapper/: __init__.py  sqlite.py  statement.py
